agregar un contenido

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>y este es el parrafo de inicio que vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+          <p>Agregue un parrafo</p>
         </div>
     </div>
 </body>
